--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-*.pyc
+/.castor.stub.php
 /infrastructure/docker/docker-compose.override.yml
 /infrastructure/docker/services/router/etc/ssl/certs/*.pem
