--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /.castor.stub.php
 /infrastructure/docker/docker-compose.override.yml
 /infrastructure/docker/services/router/certs/*.pem
+
+# Tools
+.php-cs-fixer.cache
+/tools/phpstan/var
