--- a/infrastructure/docker/docker-compose.builder.yml
+++ b/infrastructure/docker/docker-compose.builder.yml
@@ -20,6 +20,7 @@ services:
             - BUILD_NUMBER # Jenkins, TeamCity
             - RUN_ID # TaskCluster, dsari
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
-            - "${COMPOSER_CACHE_DIR}:/home/app/.composer/cache"
             - "builder-data:/home/app"
+            - "${COMPOSER_CACHE_DIR}:/home/app/.composer/cache"
+            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
+            - "../..:/home/app/root:cached"
