Fix phpstan.neon and phpstan execution
- Fix Symfony container path
- Fix ContextData type alias definition

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,10 @@ jobs:
                 run: 'castor qa:cs'
 
             -
+                name: 'Run PHPStan'
+                run: 'castor qa:phpstan'
+
+            -
                 name: 'Test HTTP server'
                 run: |
                     set -e
