--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,18 +10,17 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
 
     # symfony:
-    #    container_xml_path: '%rootDir%/../../../../../var/cache/dev/App_KernelDevDebugContainer.xml'
+    #    container_xml_path: '%rootDir%/../../../../../application/var/cache/dev/App_KernelDevDebugContainer.xml'
 
     typeAliases:
         ContextData: '''
             array{
-                project_name: int,
-                root_domain: int,
+                project_name: string,
+                root_domain: string,
                 extra_domains: string[],
+                project_directory: string,
                 php_version: string,
-                project_directory: string,
                 docker_compose_files: string[],
-                project_directory: string,
                 macos: bool,
                 power_shell: bool,
                 user_id: int,
