--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -11,7 +11,7 @@ x-services-templates:
             #- rabbitmq
         volumes:
             - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
-        user: app
+        user: root
         labels:
             - "docker-starter.worker.${PROJECT_NAME}"
 
