Config: Remove support for "project_directory"

--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -10,7 +10,7 @@ x-services-templates:
             - postgres
             #- rabbitmq
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
+            - "../..:/home/app/application:cached"
         user: app
         labels:
             - "docker-starter.worker.${PROJECT_NAME}"
