--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: 8.2
-                    tools: jolicode/castor
+                    tools: castor
 
             -
                 name: 'Build and start the infrastructure'
