--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         depends_on:
             - postgres
         volumes:
-            - "../../${PROJECT_DIRECTORY}:/home/app/application:cached"
+            - "../..:/var/www:cached"
         environment:
             - "PHP_VERSION=${PHP_VERSION}"
         labels:
