--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ parameters:
     level: 6
     paths:
         #- application/src
+        - application/public
         - castor.php
         - .castor/
     scanFiles:
@@ -10,7 +11,7 @@ parameters:
     inferPrivatePropertyTypeFromConstructor: true
 
     # symfony:
-    #    container_xml_path: '%rootDir%/../../../../../application/var/cache/dev/App_KernelDevDebugContainer.xml'
+    #    container_xml_path: application/var/cache/dev/App_KernelDevDebugContainer.xml'
 
     typeAliases:
         ContextData: '''
