--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -17,4 +17,4 @@ x-services-templates:
 # services:
 #    worker_messenger:
 #        <<: *worker_base
-#        command: php -d memory_limit=1G /var/www/application/bin/console messenger:consume async --memory-limit=128M
+#        command: php -d memory_limit=1G /var/www/bin/console messenger:consume async --memory-limit=128M
