Fix docker compose labels for workers

--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -12,7 +12,7 @@ x-services-templates:
         volumes:
             - "../..:/var/www:cached"
         labels:
-            - "docker-starter.worker.${PROJECT_NAME}"
+            - "docker-starter.worker.${PROJECT_NAME}=true"
 
 # services:
 #    worker_messenger:
