use PHP8.1 to install tools to ensure it works with lowest PHP version supported

--- a/tools/php-cs-fixer/composer.json
+++ b/tools/php-cs-fixer/composer.json
@@ -1,5 +1,12 @@
 {
+    "type": "project",
     "require": {
         "friendsofphp/php-cs-fixer": "^3.47.1"
+    },
+    "config": {
+        "platform": {
+            "php": "8.1"
+        },
+        "sort-packages": true
     }
 }
