--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -1,4 +1,5 @@
 {
+    "type": "project",
     "require": {
         "phpstan/extension-installer": "^1.3.1",
         "phpstan/phpstan": "^1.10.56",
@@ -7,6 +8,10 @@
     "config": {
         "allow-plugins": {
             "phpstan/extension-installer": true
-        }
+        },
+        "platform": {
+            "php": "8.1"
+        },
+        "sort-packages": true
     }
 }
