--- a/phpstan.neon
+++ b/phpstan.neon
@@ -28,5 +28,6 @@ parameters:
                 power_shell: bool,
                 user_id: int,
                 root_dir: string,
+                registry?: ?string,
             }
         '''
