Add autoload and vendor for phpstan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,6 +7,9 @@ parameters:
         - .castor/
     scanFiles:
         - .castor.stub.php
+#        - application/vendor/autoload.php
+#    scanDirectories:
+#        - application/vendor
     tmpDir: tools/phpstan/var
     inferPrivatePropertyTypeFromConstructor: true
 
