Add support for profile & service in up,down, and logs command

--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -9,8 +9,9 @@ x-services-templates:
             #- rabbitmq
         volumes:
             - "../..:/var/www:cached"
-        labels:
-            - "docker-starter.worker.${PROJECT_NAME}=true"
+        profiles:
+            - default
+            - worker
 
 # services:
 #    worker_messenger:
