--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             - "/var/run/docker.sock:/var/run/docker.sock"
             - "./services/router/certs:/etc/ssl/certs"
         network_mode: host
+        profiles:
+            - default
 
     frontend:
         build:
@@ -19,6 +21,8 @@ services:
             - "../..:/var/www:cached"
         environment:
             - "PHP_VERSION=${PHP_VERSION}"
+        profiles:
+            - default
         labels:
             - "traefik.enable=true"
             - "traefik.http.routers.${PROJECT_NAME}-frontend.rule=Host(${PROJECT_DOMAINS})"
@@ -34,3 +38,5 @@ services:
             - POSTGRES_PASSWORD=app
         volumes:
             - postgres-data:/var/lib/postgresql/data
+        profiles:
+            - default
