--- a/infrastructure/docker/docker-compose.worker.yml
+++ b/infrastructure/docker/docker-compose.worker.yml
@@ -4,9 +4,8 @@ x-services-templates:
         build:
             context: services/php
             target: worker
-        depends_on:
-            - postgres
-            #- rabbitmq
+        # Don't use depends_on, it does not work well when stopping containers
+        # with docker compose profiles
         volumes:
             - "../..:/var/www:cached"
         profiles:
