--- a/infrastructure/docker/docker-compose.yml
+++ b/infrastructure/docker/docker-compose.yml
@@ -16,7 +16,8 @@ services:
             context: services/php
             target: frontend
         depends_on:
-            - postgres
+            postgres:
+                condition: service_healthy
         volumes:
             - "../..:/var/www:cached"
         profiles:
