Enabled init: true in docker compose to have better signal handling
now, a CTRL+C really stop the underlying process

--- a/infrastructure/docker/docker-compose.builder.yml
+++ b/infrastructure/docker/docker-compose.builder.yml
@@ -6,6 +6,7 @@ services:
         build:
             context: services/php
             target: builder
+        init: true
         depends_on:
             - postgres
         environment:
