--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -2,8 +2,9 @@
     "type": "project",
     "require": {
         "phpstan/extension-installer": "^1.4.3",
-        "phpstan/phpstan": "^1.12.7",
-        "phpstan/phpstan-symfony": "^1.4.11"
+        "phpstan/phpstan": "^2.0.4",
+        "phpstan/phpstan-deprecation-rules": "^2.0.1",
+        "phpstan/phpstan-symfony": "^2.0"
     },
     "config": {
         "allow-plugins": {
